<resources>
	<string name="app_name">00011980</string>
	<string name="loading">Loading.</string>
	<string name="login">Login</string>
	<string name="password">Password</string>
	<string name="sign_in">Sign in</string>
	<string name="sign_up">Sign up</string>
	<string name="phone">Phone</string>
	<string name="surname">Surname</string>
	<string name="name">Name</string>
	<string name="save">Save</string>
	<string name="all">ALL</string>
	<string name="Book">BOOK</string>
	<string name="Furniture">FURNITURE</string>
	<string name="Clothing">CLOTHING</string>
	<string name="Food">FOOD</string>
	<!--<string name="Beauty_products">Beauty products</string>-->
	<string name="Beauty_products">BEAUTY PRODUCTS</string>
	<string name="Home_Materials">HOME MATERIALS</string>
	<string name="Phone">PHONE</string>
	<string name="Materials_for_cars">MATERIALS FOR CARS</string>
	<string name="category">category</string>
	<string name="delete">Delete</string>
	<string name="validation">Validation</string>
	<string name="favourite">Favourite</string>
	<string name="product_price">Product Price</string>
	<string name="product_name">Product Name</string>
	<string name="data">data</string>
	<string name="title">Title</string>
	<string name="email">Email</string>
	<string name="new_login">new login</string>
	<string name="new_password">new password</string>
	<string name="repat_password">repat password</string>
	<string name="forgat_password">Forgat password?</string>
	<string name="connect">connect</string>
	<string name="home">Home</string>
	<string name="user">User</string>
	<string name="edit">Edit</string>
</resources>