<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:background="@color/purple_500">
	
	<EditText
			android:layout_width="0dp"
			android:layout_height="50dp"
			android:inputType="textPersonName"
			android:hint="@string/name"
			android:paddingStart="10dp"
			android:ems="10"
			android:fontFamily="@font/fredoka_fonts"
			android:background="@drawable/loginedittext"
			android:id="@+id/ediregname"
			app:layout_constraintTop_toTopOf="parent"
			android:layout_marginTop="80dp"
			app:layout_constraintStart_toStartOf="@+id/guideline5"
			app:layout_constraintEnd_toStartOf="@+id/guideline6"
			tools:ignore="Autofill,RtlSymmetry"/>
	<EditText
			android:layout_width="0dp"
			android:layout_height="50dp"
			android:paddingStart="10dp"
			android:inputType="textPersonName"
			android:hint="@string/surname"
			android:fontFamily="@font/fredoka_fonts"
			android:background="@drawable/loginedittext"
			android:ems="10"
			android:id="@+id/ediregsurname"
			app:layout_constraintTop_toBottomOf="@+id/ediregname"
			android:layout_marginTop="36dp"
			app:layout_constraintStart_toStartOf="@+id/guideline5"
			app:layout_constraintEnd_toStartOf="@+id/guideline6"
			tools:ignore="Autofill,RtlSymmetry"/>
	<EditText
			android:layout_width="0dp"
			android:layout_height="50dp"
			android:paddingStart="10dp"
			android:inputType="textEmailAddress"
			android:hint="@string/email"
			android:fontFamily="@font/fredoka_fonts"
			android:background="@drawable/loginedittext"
			android:ems="10"
			android:id="@+id/ediregphone"
			app:layout_constraintTop_toBottomOf="@+id/ediregsurname"
			android:layout_marginTop="36dp"
			app:layout_constraintStart_toStartOf="@+id/guideline5"
			app:layout_constraintEnd_toStartOf="@+id/guideline6"
			tools:ignore="Autofill,RtlSymmetry,TextFields"/>
	<EditText
			android:layout_width="0dp"
			android:layout_height="50dp"
			android:paddingStart="10dp"
			android:inputType="textPersonName"
			android:hint="@string/login"
			android:fontFamily="@font/fredoka_fonts"
			android:background="@drawable/loginedittext"
			android:ems="10"
			android:id="@+id/edireglogin"
			app:layout_constraintTop_toBottomOf="@+id/ediregphone"
			android:layout_marginTop="36dp"
			app:layout_constraintStart_toStartOf="@+id/guideline5"
			app:layout_constraintEnd_toStartOf="@+id/guideline6"
			tools:ignore="Autofill,RtlSymmetry"/>
	<EditText
			android:layout_width="0dp"
			android:layout_height="50dp"
			android:paddingStart="10dp"
			android:inputType="textPassword"
			android:hint="@string/password"
			android:fontFamily="@font/fredoka_fonts"
			android:background="@drawable/loginedittext"
			android:ems="10"
			android:id="@+id/ediregpass"
			app:layout_constraintTop_toBottomOf="@+id/edireglogin"
			android:layout_marginTop="36dp"
			app:layout_constraintStart_toStartOf="@+id/guideline5"
			app:layout_constraintEnd_toStartOf="@+id/guideline6"
			tools:ignore="Autofill,RtlSymmetry"/>
	<androidx.constraintlayout.widget.Guideline
			android:orientation="vertical"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			app:layout_constraintGuide_percent="0.1"
			android:id="@+id/guideline5"/>
	<androidx.constraintlayout.widget.Guideline
			android:orientation="vertical"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			app:layout_constraintGuide_percent="0.9"
			android:id="@+id/guideline6"/>
	<Button
			android:text="@string/save"
			android:layout_width="0dp"
			android:inputType="text"
			android:textSize="25sp"
			android:fontFamily="@font/fredoka_fonts"
			android:textColor="@color/white"
			android:layout_height="wrap_content"
			android:id="@+id/btnregsave"
			android:background="@drawable/buttonsignin"
			app:layout_constraintTop_toBottomOf="@+id/ediregpass"
			android:layout_marginTop="56dp"
			app:layout_constraintEnd_toStartOf="@+id/guideline6"
			app:layout_constraintStart_toStartOf="@+id/guideline5" tools:ignore="TextViewEdits"/>
</androidx.constraintlayout.widget.ConstraintLayout>