<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:app="http://schemas.android.com/apk/res-auto"
		xmlns:tools="http://schemas.android.com/tools"
		android:background="@color/purple_500"
		android:layout_width="match_parent"
		android:layout_height="match_parent">
	
	<EditText
			android:layout_width="0dp"
			android:layout_height="50dp"
			android:inputType="textEmailAddress"
			android:hint="@string/email"
			android:paddingStart="10dp"
			android:fontFamily="@font/fredoka_fonts"
			android:background="@drawable/loginedittext"
			android:ems="10"
			android:id="@+id/ediforemail"
			app:layout_constraintTop_toTopOf="parent"
			android:layout_marginTop="108dp"
			app:layout_constraintStart_toStartOf="@+id/guideline9"
			app:layout_constraintEnd_toStartOf="@+id/guideline10" tools:ignore="RtlSymmetry"/>
	<EditText
			android:layout_width="0dp"
			android:layout_height="50dp"
			android:inputType="textPersonName"
			android:hint="@string/new_login"
			android:paddingStart="10dp"
			android:fontFamily="@font/fredoka_fonts"
			android:background="@drawable/loginedittext"
			android:ems="10"
			android:id="@+id/ediforlogin"
			app:layout_constraintTop_toBottomOf="@+id/ediforemail"
			android:layout_marginTop="36dp"
			app:layout_constraintStart_toStartOf="@+id/guideline9"
			app:layout_constraintEnd_toStartOf="@+id/guideline10" tools:ignore="RtlSymmetry"/>
	<EditText
			android:layout_width="0dp"
			android:layout_height="50dp"
			android:inputType="textPassword"
			android:ems="10"
			android:paddingStart="10dp"
			android:fontFamily="@font/fredoka_fonts"
			android:hint="@string/repat_password"
			android:background="@drawable/loginedittext"
			android:id="@+id/ediforpass2"
			app:layout_constraintTop_toBottomOf="@+id/ediforpass1"
			app:layout_constraintEnd_toStartOf="@+id/guideline10"
			app:layout_constraintStart_toStartOf="@+id/guideline9" app:layout_constraintHorizontal_bias="0.0"
			android:layout_marginTop="36dp" tools:ignore="RtlSymmetry"/>
	<EditText
			android:layout_width="0dp"
			android:layout_height="50dp"
			android:inputType="textPassword"
			android:ems="10"
			android:paddingStart="10dp"
			android:fontFamily="@font/fredoka_fonts"
			android:hint="@string/new_password"
			android:background="@drawable/loginedittext"
			android:id="@+id/ediforpass1"
			app:layout_constraintTop_toBottomOf="@+id/ediforlogin"
			android:layout_marginTop="36dp"
			app:layout_constraintEnd_toStartOf="@+id/guideline10"
			app:layout_constraintStart_toStartOf="@+id/guideline9" tools:ignore="RtlSymmetry"/>
	<androidx.constraintlayout.widget.Guideline
			android:orientation="vertical"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			app:layout_constraintGuide_percent="0.1"
			android:id="@+id/guideline9"/>
	<androidx.constraintlayout.widget.Guideline
			android:orientation="vertical"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			app:layout_constraintGuide_percent="0.9"
			android:id="@+id/guideline10"/>
	<Button
			android:text="@string/save"
			android:layout_width="0dp"
			android:layout_height="55dp"
			android:fontFamily="@font/fredoka_fonts"
			android:background="@drawable/buttonsignin"
			android:textColor="@color/white"
			android:textSize="25sp"
			android:id="@+id/btnforsave"
			app:layout_constraintEnd_toStartOf="@+id/guideline10"
			app:layout_constraintStart_toStartOf="@+id/guideline9"
			app:layout_constraintTop_toBottomOf="@+id/ediforpass2" android:layout_marginTop="56dp"
			app:layout_constraintHorizontal_bias="0.497"/>
</androidx.constraintlayout.widget.ConstraintLayout>