<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:elevation="3dp"
		android:layout_width="match_parent"
		android:background="@color/purple_500"
		android:layout_height="570dp">
	<androidx.constraintlayout.widget.ConstraintLayout
			android:id="@+id/conlayout"
			android:layout_width="match_parent"
			android:layout_height="match_parent">
		<EditText
				android:layout_width="250dp"
				android:layout_height="50dp"
				android:paddingStart="10dp"
				android:fontFamily="@font/fredoka_fonts"
				android:inputType="textPersonName"
				android:background="@drawable/loginedittext"
				android:hint="@string/product_name"
				android:ems="10"
				android:id="@+id/edipopuptitle"
				app:layout_constraintTop_toTopOf="parent"
				android:layout_marginTop="60dp"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintEnd_toEndOf="parent"
				tools:ignore="Autofill"/>
		<TextView
				android:layout_width="250dp"
				android:layout_height="wrap_content"
				android:inputType="textPersonName"
				android:hint="@string/data"
				android:fontFamily="@font/fredoka_fonts"
				android:ems="10"
				android:id="@+id/edipopupmeaning"
				tools:ignore="Autofill,TextViewEdits"
				app:layout_constraintTop_toBottomOf="@+id/textView3"
				android:layout_marginTop="16dp"
				app:layout_constraintStart_toStartOf="@+id/btnpopupsave"
				app:layout_constraintEnd_toEndOf="@+id/btnpopupsave"/>
		<EditText
				android:layout_width="250dp"
				android:layout_height="50dp"
				android:inputType="number"
				android:fontFamily="@font/fredoka_fonts"
				android:paddingStart="10dp"
				android:background="@drawable/loginedittext"
				android:hint="@string/product_price"
				android:ems="10"
				android:id="@+id/edipopupyouword"
				app:layout_constraintStart_toStartOf="@+id/edipopuptitle"
				app:layout_constraintEnd_toEndOf="@+id/edipopuptitle"
				app:layout_constraintTop_toBottomOf="@+id/edipopuptitle" android:layout_marginTop="36dp"
				app:layout_constraintHorizontal_bias="0.0"
				tools:ignore="Autofill,RtlSymmetry"/>
		<Button
				android:text="@string/save"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:id="@+id/btnpopupsave"
				android:fontFamily="@font/fredoka_fonts"
				android:background="@drawable/buttonsignin"
				android:textColor="#FFFFFF"
				app:layout_constraintBottom_toTopOf="@+id/view4"
				android:layout_marginBottom="12dp"
				app:layout_constraintStart_toEndOf="@+id/view2"
				app:layout_constraintEnd_toStartOf="@+id/view3"/>
		<View
				android:layout_width="30dp"
				android:layout_height="wrap_content"
				android:id="@+id/view2"
				app:layout_constraintEnd_toStartOf="@+id/edipopupyouword"
				app:layout_constraintTop_toTopOf="parent"/>
		<View
				android:layout_width="30dp"
				android:layout_height="wrap_content"
				android:id="@+id/view3"
				app:layout_constraintStart_toEndOf="@+id/edipopupyouword"
				app:layout_constraintTop_toTopOf="parent"/>
		<View
				android:layout_width="0dp"
				android:layout_height="3dp"
				android:id="@+id/view4"
				app:layout_constraintTop_toBottomOf="@+id/checkBoxpopup"
				app:layout_constraintHorizontal_bias="0.0"
				app:layout_constraintStart_toStartOf="@+id/view2"
				app:layout_constraintEnd_toEndOf="@+id/view3"
				android:layout_marginTop="104dp"/>
		<CheckBox
				android:layout_width="wrap_content"
				android:layout_height="50dp"
				android:text="@string/favourite"
				android:fontFamily="@font/fredoka_fonts"
				android:textColor="@color/white"
				app:layout_constraintTop_toBottomOf="@+id/edipopupyouword"
				app:layout_constraintStart_toStartOf="@+id/edipopupyouword" android:id="@+id/checkBoxpopup"
				android:layout_marginTop="8dp"/>
		<TextView
				android:text="@string/validation"
				android:layout_width="wrap_content"
				android:fontFamily="@font/fredoka_fonts"
				android:layout_height="wrap_content"
				android:id="@+id/textView3"
				app:layout_constraintTop_toBottomOf="@+id/view4"
				android:layout_marginTop="16dp"
				app:layout_constraintEnd_toStartOf="@+id/view3"
				app:layout_constraintStart_toEndOf="@+id/view2"/>
		<Button
				android:text="@string/all"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:background="@drawable/buttonsignin"
				android:id="@+id/btnpopupmenu"
				android:fontFamily="@font/fredoka_fonts"
				android:textColor="#FFFFFF"
				app:layout_constraintEnd_toEndOf="@+id/edipopupyouword"
				app:layout_constraintTop_toBottomOf="@+id/edipopupyouword"
				app:layout_constraintBottom_toBottomOf="@+id/checkBoxpopup"
				app:layout_constraintVertical_bias="1.0"
				android:layout_marginEnd="4dp"/>
		<ImageView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				app:srcCompat="@android:drawable/ic_menu_day"
				android:id="@+id/imageView2"
				app:layout_constraintEnd_toEndOf="@+id/edipopupmeaning"
				app:layout_constraintTop_toTopOf="@+id/edipopupmeaning"
				app:layout_constraintBottom_toBottomOf="@+id/edipopupmeaning"/>
		<DatePicker
				android:id="@+id/datePicker"
				android:layout_width="0dp"
				android:layout_height="300dp"
				android:elevation="8dp"
				android:visibility="invisible"
				android:layout_centerHorizontal="true"
				app:layout_constraintTop_toTopOf="@+id/edipopupyouword"
				app:layout_constraintBottom_toBottomOf="@+id/edipopupmeaning"
				app:layout_constraintStart_toStartOf="@+id/checkBoxpopup" app:layout_constraintHorizontal_bias="0.482"
				app:layout_constraintVertical_bias="0.498"
				app:layout_constraintEnd_toEndOf="@+id/btnpopupmenu"/>
	</androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>
