<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:app="http://schemas.android.com/apk/res-auto"
		xmlns:tools="http://schemas.android.com/tools"
		android:layout_width="match_parent"
		android:background="@color/purple_500"
		android:layout_height="match_parent">
	
	<EditText
			android:layout_width="0dp"
			android:layout_height="50dp"
			android:inputType="textPersonName"
			android:hint="@string/login"
			android:fontFamily="@font/fredoka_fonts"
			android:ems="10"
			android:paddingStart="10dp"
			android:background="@drawable/loginedittext"
			android:id="@+id/ediloglogin"
			app:layout_constraintTop_toTopOf="parent"
			android:layout_marginTop="144dp"
			app:layout_constraintStart_toStartOf="@+id/guideline"
			app:layout_constraintEnd_toStartOf="@+id/guideline2"
			tools:ignore="Autofill,RtlSymmetry"/>
	<EditText
			android:layout_width="0dp"
			android:layout_height="50dp"
			android:inputType="textPassword"
			android:fontFamily="@font/fredoka_fonts"
			android:hint="@string/password"
			android:ems="10"
			android:maxLength="8"
			android:paddingStart="10dp"
			android:background="@drawable/loginedittext"
			android:id="@+id/edilogpassword"
			app:layout_constraintTop_toBottomOf="@+id/ediloglogin"
			android:layout_marginTop="60dp"
			app:layout_constraintEnd_toEndOf="@+id/ediloglogin"
			app:layout_constraintStart_toStartOf="@+id/ediloglogin"
			tools:ignore="Autofill,RtlSymmetry"/>
	<androidx.constraintlayout.widget.Guideline
			android:orientation="vertical"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			app:layout_constraintGuide_percent="0.1"
			android:id="@+id/guideline"/>
	<androidx.constraintlayout.widget.Guideline
			android:orientation="vertical"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			app:layout_constraintGuide_percent="0.9"
			android:id="@+id/guideline2"/>
	<Button
			android:text="@string/sign_in"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:background="@drawable/buttonsignin"
			android:id="@+id/btnlogsignin"
			android:textColor="@color/white"
			android:textSize="20sp"
			android:inputType="text"
			android:fontFamily="@font/fredoka_fonts"
			app:layout_constraintEnd_toStartOf="@+id/guideline2"
			app:layout_constraintTop_toTopOf="@+id/guideline3"
			app:layout_constraintStart_toStartOf="@+id/guideline4"
			tools:ignore="TextViewEdits"/>
	<Button
			android:text="@string/sign_up"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/btnlogsignup"
			android:inputType="text"
			android:textColor="@color/white"
			android:textSize="20sp"
			android:fontFamily="@font/fredoka_fonts"
			android:background="@drawable/buttonsigunup"
			app:layout_constraintStart_toStartOf="@+id/guideline"
			app:layout_constraintTop_toTopOf="@+id/guideline3"
			app:layout_constraintEnd_toStartOf="@+id/guideline4"
			tools:ignore="TextViewEdits"/>
	<androidx.constraintlayout.widget.Guideline
			android:orientation="horizontal"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			app:layout_constraintGuide_percent="0.5"
			android:id="@+id/guideline3"/>
	<androidx.constraintlayout.widget.Guideline
			android:orientation="vertical"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			app:layout_constraintGuide_percent="0.5"
			android:id="@+id/guideline4"/>
	<TextView
			android:text="@string/forgat_password"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/txtlogforgatpass"
			android:textColor="#FF0000"
			android:textSize="18sp"
			app:layout_constraintTop_toBottomOf="@+id/edilogpassword"
			app:layout_constraintStart_toStartOf="@+id/edilogpassword"
			android:layout_marginStart="8dp"
			android:layout_marginTop="8dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>