<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:tools="http://schemas.android.com/tools"
		xmlns:app="http://schemas.android.com/apk/res-auto"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:background="@color/purple_500">
	<androidx.cardview.widget.CardView
			android:layout_width="180dp"
			android:layout_height="180dp"
			android:elevation="0dp"
			app:cardCornerRadius="100dp"
			app:layout_constraintTop_toTopOf="parent"
			android:layout_marginTop="60dp"
			app:layout_constraintEnd_toStartOf="@+id/guideline12"
			app:layout_constraintStart_toStartOf="@+id/guideline11"
			android:id="@+id/cardView2">
		<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:orientation="vertical">
			<ImageView
					android:id="@+id/imguseruser"
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:src="@drawable/image"
					android:elevation="0dp"
					android:scaleType="fitXY"/>
		</LinearLayout>
	</androidx.cardview.widget.CardView>
	<TextView
			android:text="@string/connect"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/txtusernname"
			android:textSize="20sp"
			android:textStyle="bold"
			android:textColor="@color/white"
			android:fontFamily="@font/fredoka_fonts"
			app:layout_constraintTop_toBottomOf="@+id/cardView2"
			android:layout_marginTop="8dp"
			app:layout_constraintStart_toStartOf="@+id/cardView2"
			app:layout_constraintEnd_toEndOf="@+id/cardView2"
			app:layout_constraintHorizontal_bias="0.49"/>
	<Button
			android:text="@string/edit"
			android:inputType="text"
			android:textSize="20sp"
			android:textColor="@color/white"
			android:textStyle="bold"
			android:fontFamily="@font/fredoka_fonts"
			android:background="@drawable/buttonsignin"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:id="@+id/btnuseredit"
			tools:ignore="TextViewEdits"
			app:layout_constraintTop_toBottomOf="@+id/txtusernname"
			android:layout_marginTop="8dp"
			app:layout_constraintStart_toStartOf="@+id/cardView2" app:layout_constraintEnd_toEndOf="@+id/txtusernname"/>
	<View
			android:layout_width="50dp"
			android:layout_height="50dp"
			android:background="@drawable/buttonsignin"
			app:layout_constraintTop_toTopOf="@+id/btnuseredit"
			app:layout_constraintStart_toEndOf="@+id/btnuseredit"
			android:layout_marginStart="12dp"
			app:layout_constraintBottom_toBottomOf="@+id/btnuseredit"
			android:id="@+id/view7"
			app:layout_constraintEnd_toEndOf="@+id/cardView2"/>
	<ImageView
			android:layout_width="0dp"
			android:layout_height="0dp"
			android:paddingTop="3dp"
			android:paddingEnd="6dp"
			android:paddingStart="3dp"
			android:paddingBottom="5dp"
			app:srcCompat="@drawable/ic_logout"
			android:id="@+id/imguserlogout"
			app:layout_constraintEnd_toEndOf="@+id/view7"
			app:layout_constraintBottom_toBottomOf="@+id/view7"
			app:layout_constraintTop_toTopOf="@+id/view7"
			app:layout_constraintStart_toStartOf="@+id/view7"/>
	<EditText
			android:layout_width="0dp"
			android:layout_height="50dp"
			android:inputType="textPersonName"
			android:hint="@string/name"
			android:textStyle="bold"
			android:enabled="false"
			android:textColor="@color/black"
			android:ems="10"
			android:paddingStart="10dp"
			android:background="@drawable/loginedittext"
			android:fontFamily="@font/fredoka_fonts"
			android:id="@+id/ediusername"
			app:layout_constraintTop_toBottomOf="@+id/btnuseredit"
			app:layout_constraintStart_toStartOf="@+id/guideline11"
			app:layout_constraintEnd_toStartOf="@+id/guideline12"
			android:layout_marginTop="28dp"
			app:layout_constraintHorizontal_bias="0.504"
			tools:ignore="RtlSymmetry"/>
	<EditText
			android:layout_width="0dp"
			android:layout_height="50dp"
			android:inputType="textPersonName"
			android:hint="@string/surname"
			android:textColor="@color/black"
			android:textStyle="bold"
			android:enabled="false"
			android:paddingStart="10dp"
			android:background="@drawable/loginedittext"
			android:ems="10"
			android:fontFamily="@font/fredoka_fonts"
			android:id="@+id/ediusersurname"
			app:layout_constraintTop_toBottomOf="@+id/ediusername"
			android:layout_marginTop="28dp"
			app:layout_constraintStart_toStartOf="@+id/guideline11"
			app:layout_constraintEnd_toStartOf="@+id/guideline12"
			tools:ignore="RtlSymmetry"/>
	<EditText
			android:layout_width="0dp"
			android:layout_height="50dp"
			android:inputType="textEmailAddress"
			android:ems="10"
			android:enabled="false"
			android:paddingStart="10dp"
			android:textStyle="bold"
			android:textColor="@color/black"
			android:background="@drawable/loginedittext"
			android:fontFamily="@font/fredoka_fonts"
			android:hint="@string/email"
			android:id="@+id/ediuseremail"
			app:layout_constraintTop_toBottomOf="@+id/ediusersurname"
			android:layout_marginTop="28dp"
			app:layout_constraintStart_toStartOf="@+id/guideline11"
			app:layout_constraintEnd_toStartOf="@+id/guideline12"
			tools:ignore="RtlSymmetry"/>
	<androidx.constraintlayout.widget.Guideline
			android:orientation="vertical"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			app:layout_constraintGuide_percent="0.1"
			android:id="@+id/guideline11"/>
	<androidx.constraintlayout.widget.Guideline
			android:orientation="vertical"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			app:layout_constraintGuide_percent="0.9"
			android:id="@+id/guideline12"/>
</androidx.constraintlayout.widget.ConstraintLayout>